Added my thoughts about Git.

--- a/vpizzo.html
+++ b/vpizzo.html
@@ -2,6 +2,7 @@
 <head><title>Git Test Page</title></head>
 <body>
 Hello world! </br>
-Vinnie Pizzo
+Vinnie Pizzo </br>
+While some of this GitBash stuff is confusing, I'm enjoying it so far!
 </body>
 </html>
