Font set and hyperlink added.

--- a/vpizzo.html
+++ b/vpizzo.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
+<a href="http://www.google.com"> Google </a>
 Hello world! </br>
 Vinnie Pizzo </br>
 While some of this GitBash stuff is confusing, I'm enjoying it so far!
